--- a/css/app.css
+++ b/css/app.css
@@ -480,7 +480,7 @@ h2 {
     height: 390px;
   }
 }
-@media (max-width: 700px) {
+@media (max-width: 500px) {
   .hero__image {
     display: none;
   }
@@ -549,6 +549,7 @@ h2 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  gap: 20px;
   padding: 120px 104px;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
@@ -669,6 +670,11 @@ h2 {
     margin-top: 0;
     margin-left: 0;
     width: 100%;
+  }
+}
+@media (max-width: 1280px) {
+  .gym__video-wrapper {
+    margin-left: 0;
   }
 }
 @media (max-width: 1024px) {
@@ -849,8 +855,7 @@ h2 {
       -ms-flex-align: center;
           align-items: center;
   background-color: #fff;
-  -webkit-transition: border 0.3s;
-  transition: border 0.3s;
+  border: 6px solid #fff;
   border-image-slice: 10;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
@@ -876,8 +881,10 @@ h2 {
   font-family: "Roboto Regular";
   margin-bottom: 96px;
 }
-.abonements .card p:nth-child(3) {
+.abonements .card div:nth-child(3) {
+  position: relative;
   white-space: nowrap;
+  z-index: 1;
   line-height: 100%;
   color: #103aae;
   font-family: "Roboto Bold";
@@ -885,11 +892,25 @@ h2 {
   font-size: 60px;
   margin-bottom: 60px;
 }
-.abonements .card p:nth-child(3) span {
+.abonements .card div:nth-child(3) span {
   color: #102654;
 }
+.abonements .card div:nth-child(3) p {
+  z-index: -1;
+  bottom: 0;
+  left: -18px;
+  position: absolute;
+  font-weight: 600;
+  color: #e8e8e8;
+  font-size: 100px;
+}
 @media (max-width: 700px) {
-  .abonements .card p:nth-child(3) {
+  .abonements .card div:nth-child(3) p {
+    font-size: 80px;
+  }
+}
+@media (max-width: 700px) {
+  .abonements .card div:nth-child(3) {
     font-size: 48px;
     margin-bottom: 50px;
   }
@@ -905,6 +926,9 @@ h2 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-transition: opacity 0.6s;
+  transition: opacity 0.6s;
+  cursor: pointer;
   white-space: nowrap;
   font-size: 12px;
   font-weight: 600;
@@ -919,8 +943,11 @@ h2 {
   text-transform: uppercase;
   border: 1px solid #102654;
 }
+.abonements .card button:hover, .abonements .card button:focus, .abonements .card button:active {
+  opacity: 0.6;
+}
 .abonements .card--active {
-  border: 6px solid red;
+  border: 6px solid #fff;
   -o-border-image: linear-gradient(to right bottom, #d10a42, #00359f);
      border-image: -webkit-gradient(linear, left top, right bottom, from(#d10a42), to(#00359f));
      border-image: linear-gradient(to right bottom, #d10a42, #00359f);
@@ -933,11 +960,13 @@ h2 {
   color: #fff;
 }
 .abonements .card:hover, .abonements .card:focus, .abonements .card:active {
-  border: 6px solid red;
+  border: 6px solid #fff;
   -o-border-image: linear-gradient(to right bottom, #d10a42, #00359f);
      border-image: -webkit-gradient(linear, left top, right bottom, from(#d10a42), to(#00359f));
      border-image: linear-gradient(to right bottom, #d10a42, #00359f);
   border-image-slice: 10;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 .abonements .card:hover button, .abonements .card:focus button, .abonements .card:active button {
   border: none;
@@ -1665,12 +1694,8 @@ h2 {
 @media (max-width: 700px) {
   .stock__card {
     width: 100%;
-    padding: 46px 30px;
-  }
-}
-@media (max-width: 375px) {
-  .stock__card {
     height: auto;
+    padding: 46px 30px;
   }
 }
 .stock__offer p:nth-child(1) {
@@ -1680,7 +1705,7 @@ h2 {
   font-size: 26px;
   line-height: 150%;
 }
-@media (max-width: 500px) {
+@media (max-width: 700px) {
   .stock__offer {
     margin-bottom: 35px;
   }
@@ -1773,7 +1798,7 @@ h2 {
 }
 @media (max-width: 700px) {
   .reviews .swiper-button-prev {
-    left: 0;
+    left: -5px;
   }
 }
 .reviews .swiper-button-next {
@@ -1790,7 +1815,7 @@ h2 {
 }
 @media (max-width: 700px) {
   .reviews .swiper-button-next {
-    right: 0;
+    right: -5px;
   }
 }
 .reviews__content {
