--- a/css/app.css
+++ b/css/app.css
@@ -320,6 +320,22 @@ h2 {
       -ms-flex-align: center;
           align-items: center;
 }
+.hero__top > a {
+  font-size: 26px;
+  line-height: 100%;
+  text-transform: uppercase;
+  color: #fff;
+}
+@media (max-width: 700px) {
+  .hero__top > a {
+    font-size: 24px;
+  }
+}
+@media (max-width: 375px) {
+  .hero__top > a {
+    font-size: 20px;
+  }
+}
 .hero__content {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -333,7 +349,15 @@ h2 {
   margin-top: 1px;
   gap: 10px;
 }
-.hero__content button {
+@media (max-width: 700px) {
+  .hero__content {
+    margin-top: 80px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+.hero__button {
   padding: 24px 56px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -357,12 +381,12 @@ h2 {
   -webkit-transition: background-color, color 0.6s;
   transition: background-color, color 0.6s;
 }
-.hero__content button:hover, .hero__content button:active, .hero__content button:focus {
+.hero__button:hover, .hero__button:active, .hero__button:focus {
   background-color: #fff;
   color: #102654;
 }
 @media (max-width: 1024px) {
-  .hero__content button {
+  .hero__button {
     max-width: 183px;
     padding: 24px 33px;
     font-size: 12px;
@@ -371,18 +395,10 @@ h2 {
   }
 }
 @media (max-width: 700px) {
-  .hero__content button {
+  .hero__button {
     margin-top: 60px;
     max-width: unset;
     width: 100%;
-  }
-}
-@media (max-width: 700px) {
-  .hero__content {
-    margin-top: 80px;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
   }
 }
 .hero__text {
@@ -512,22 +528,6 @@ h2 {
     display: none;
   }
 }
-.hero a {
-  font-size: 26px;
-  line-height: 100%;
-  text-transform: uppercase;
-  color: #fff;
-}
-@media (max-width: 700px) {
-  .hero a {
-    font-size: 24px;
-  }
-}
-@media (max-width: 375px) {
-  .hero a {
-    font-size: 20px;
-  }
-}
 @media (max-width: 1280px) {
   .hero {
     padding: 30px 70px 50px;
@@ -561,6 +561,7 @@ h2 {
   }
 }
 .gym__text {
+  margin-top: 50px;
   max-width: 355px;
   font-family: "Roboto Light";
   font-size: 16px;
@@ -587,6 +588,7 @@ h2 {
 @media (max-width: 1024px) {
   .gym__text {
     max-width: unset;
+    margin-top: 0;
     text-align: center;
     padding: 0 80px;
   }
@@ -619,46 +621,14 @@ h2 {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
-.gym__video-wrapper::after {
-  position: absolute;
-  content: "";
-  left: calc(50% - 50px);
-  top: calc(50% - 50px);
-  background: url(../images/design/play-button.525f48.png) center no-repeat;
-  width: 100px;
-  height: 100px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  z-index: 2;
-}
-@media (max-width: 1024px) {
-  .gym__video-wrapper::after {
-    width: 73px;
-    height: 73px;
-    left: calc(50% - 32px);
-    top: calc(50% - 32px);
-    background-size: contain;
-  }
-}
-.gym__video-wrapper::before {
-  position: absolute;
-  content: "";
-  width: 100%;
-  height: 100%;
-  background-color: #14367a;
-  opacity: 0.5;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  z-index: 1;
-}
-.gym__video-wrapper img {
+.gym__video-wrapper iframe {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
 @media (max-width: 1024px) {
-  .gym__video-wrapper img {
+  .gym__video-wrapper iframe {
     width: 266px;
     height: 167px;
     margin-left: calc(50% - 133px);
@@ -666,7 +636,7 @@ h2 {
   }
 }
 @media (max-width: 700px) {
-  .gym__video-wrapper img {
+  .gym__video-wrapper iframe {
     margin-top: 0;
     margin-left: 0;
     width: 100%;
@@ -926,6 +896,7 @@ h2 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  color: #102654;
   -webkit-transition: opacity 0.6s;
   transition: opacity 0.6s;
   cursor: pointer;
@@ -1057,13 +1028,14 @@ h2 {
     margin: 15px 0 36px;
   }
 }
-.promo__content button {
+.promo__content a {
   max-width: 343px;
   max-height: 67px;
   white-space: nowrap;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  font-family: "Roboto", sans-serif;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -1082,13 +1054,14 @@ h2 {
   -webkit-transition: background-color, color 0.6s ease-in-out;
   transition: background-color, color 0.6s ease-in-out;
   border: 4px solid #fff;
+  opacity: 1 !important;
 }
-.promo__content button:active, .promo__content button:focus, .promo__content button:hover {
+.promo__content a:active, .promo__content a:focus, .promo__content a:hover {
   background-color: #fff;
   color: #ed0233;
 }
 @media (max-width: 1024px) {
-  .promo__content button {
+  .promo__content a {
     max-width: 202px;
     max-height: 40px;
     padding: 16px 50px;
@@ -1096,7 +1069,7 @@ h2 {
   }
 }
 @media (max-width: 700px) {
-  .promo__content button {
+  .promo__content a {
     max-width: unset;
     width: 100%;
   }
@@ -2385,6 +2358,60 @@ h2 {
             align-items: flex-start;
     gap: 30px 5px;
   }
+}
+
+#openPopupBtn {
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+/* Popup styles */
+.popup {
+  z-index: 4;
+  display: none; /* Hidden by default */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Black background with opacity */
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.popup-content {
+  background-color: #fff;
+  padding: 70px;
+  font-size: 18px;
+  line-height: 100%;
+  height: auto;
+  border-radius: 5px;
+  text-align: center;
+  position: relative;
+  min-width: 500px;
+  font-family: "Roboto", sans-serif;
+  color: #102654;
+}
+.popup-content h2 {
+  margin-bottom: 20px;
+}
+@media (max-width: 700px) {
+  .popup-content {
+    min-width: unset;
+  }
+}
+
+/* Close button styles */
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 24px;
+  cursor: pointer;
 }
 
 /* Browser specific styles */
